Attempt easier tagning

--- a/.github/workflows/update-main-version.yml
+++ b/.github/workflows/update-main-version.yml
@@ -24,7 +24,9 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-      - name: Tag new target
-        run: git tag -f ${{ github.event.inputs.main_version }} ${{ github.event.inputs.target }}
-      - name: Push new tag
+      - name: Tag new targets
+        run: |
+          git tag -f ${{ github.event.inputs.target }}
+          git tag -f ${{ github.event.inputs.main_version }} ${{ github.event.inputs.target }}
+      - name: Push new tags
         run: git push origin ${{ github.event.inputs.main_version }} --force
