--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,22 +10,17 @@ on:
 jobs:
   swiftlint:
     name: Swiftlint
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-
-      - uses: norio-nomura/action-swiftlint@3.2.1
-        with:
-          args: --strict
+      - run: swiftlint --strict
 
   editorconfig-check:
     name: Editorconfig check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - uses: editorconfig-checker/action-editorconfig-checker@main
-
       - run: editorconfig-checker
 
   tests-succeeded:
